// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Default 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Toggle",
      },
    ]
  }
  accessibilityLabel="Default Switch"
  accessibilityRole="switch"
  accessibilityState={
    Object {
      "checked": undefined,
      "disabled": undefined,
    }
  }
  accessible={true}
  focusable={true}
  keyUpEvents={
    Array [
      Object {
        "key": " ",
      },
      Object {
        "key": "Enter",
      },
    ]
  }
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "borderColor": undefined,
      "borderRadius": undefined,
      "borderWidth": undefined,
      "flexDirection": "row-reverse",
      "minHeight": undefined,
      "minWidth": undefined,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#424242",
        "fontFamily": "Segoe UI",
        "fontSize": 12,
        "color": "#242424",
    }
  >
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row-reverse",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#f0f0f0",
          "borderRadius": 100,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": 8,
          "marginTop": undefined,
          "width": 52,
        }
      }
    >
      <View
        animationClass="Ribbon_SwitchThumb"
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "elevation": 8,
            "height": 26,
            "margin": 3,
            "width": 26,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Switch Disabled 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Toggle",
      },
    ]
  }
  accessibilityLabel="Default Switch Disabled"
  accessibilityRole="switch"
  accessibilityState={
    Object {
      "checked": undefined,
      "disabled": true,
    }
  }
  accessible={true}
  focusable={false}
  keyUpEvents={
    Array [
      Object {
        "key": " ",
      },
      Object {
        "key": "Enter",
      },
    ]
  }
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "borderColor": undefined,
      "borderRadius": undefined,
      "borderWidth": undefined,
      "flexDirection": "row-reverse",
      "minHeight": undefined,
      "minWidth": undefined,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#e0e0e0",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    Default Switch Disabled
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row-reverse",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#f0f0f0",
          "borderRadius": 100,
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "flex-start",
          "marginBottom": undefined,
          "marginLeft": undefined,
          "marginRight": 8,
          "marginTop": undefined,
          "width": 52,
        }
      }
    >
      <View
        animationClass="Ribbon_SwitchThumb"
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "elevation": 0,
            "height": 26,
            "margin": 3,
            "width": 26,
          }
        }
      />
    </View>
  </View>
</View>
`;
